# Ros2Msg

./: CMakeLists.txt  library.json
bindings/: bindings.cpp  pybind_ros2_serde.cpp
include/builtin_interfaces/: Duration.hpp  Time.hpp
include/custom_msg/: Delta.hpp  DeltaMultiArray.hpp  config_msg.hpp
include/serde/: ros2_serde.hpp  ros2_types.h  serde.hpp
include/std_msg/: Bool.hpp  Byte.hpp  ByteMultiArray.hpp  Char.hpp  ColorRGBA.hpp  Empty.hpp  Float32.hpp  Float32MultiArray.hpp  Float64.hpp  Float64MultiArray.hpp  Header.hpp  Int16.hpp  Int16MultiArray.hpp  Int32.hpp  Int32MultiArray.hpp  Int64.hpp  Int64MultiArray.hpp  Int8.hpp  Int8MultiArray.hpp  MultiArrayDimension.hpp  MultiArrayLayout.hpp  String.hpp  UInt16.hpp  UInt16MultiArray.hpp  UInt32.hpp  UInt32MultiArray.hpp  UInt64.hpp  UInt64MultiArray.hpp  UInt8.hpp  UInt8MultiArray.hpp  helper.hpp
tests/builtin_interfaces/: Duration_test.cpp  Time_test.cpp
tests/std_msg/: Bool_test.cpp  ByteMultiArray_test.cpp  MultiArrayDimension_test.cpp  MultiArrayLayout_test.cpp
